Fix mover-icon on firefox

--- a/src/components/editor/Editor.scss
+++ b/src/components/editor/Editor.scss
@@ -137,7 +137,7 @@ $editor-vertical-spacing: 15px;
   }
 }
 
-.mover-icon {
+.mover-icon::after {
   display: none;
   position: absolute;
   margin: 0 auto;
@@ -151,7 +151,7 @@ $editor-vertical-spacing: 15px;
   opacity: 0.5;
 }
 
-.self:hover .mover-icon {
+.self:hover .mover-icon::after {
   display: block;
 }
 
